UHF-7791: WIP: Implementing new card component

--- a/src/js/react-search/linkedevents/index.html
+++ b/src/js/react-search/linkedevents/index.html
@@ -9,11 +9,11 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
-    <link rel="preload" href="https://helfi-etusivu.docker.so/etusivu-assets/themes/contrib/hdbt/dist/fonts/HelsinkiGrotesk-Regular.woff"/>
-    <link rel="preload" href="https://helfi-etusivu.docker.so/etusivu-assets/themes/contrib/hdbt/dist/fonts/HelsinkiGrotesk-Bold.woff"/>
-    <link rel="preload" href="https://helfi-etusivu.docker.so/etusivu-assets/themes/contrib/hdbt/dist/fonts/HelsinkiGrotesk-Medium.woff"/>
-    <link rel="stylesheet" href="https://helfi-etusivu.docker.so/etusivu-assets/themes/contrib/hdbt/dist/css/styles.min.css" />
-    <link rel="stylesheet" href="https://helfi-etusivu.docker.so/etusivu-assets/themes/custom/hdbt_subtheme/dist/css/styles.min.css" />
+    <link rel="preload" href="../../../../dist/fonts/HelsinkiGrotesk-Regular.woff"/>
+    <link rel="preload" href="../../../../dist/fonts/HelsinkiGrotesk-Bold.woff"/>
+    <link rel="preload" href="../../../../dist/fonts/HelsinkiGrotesk-Medium.woff"/>
+    <link rel="stylesheet" href="../../../../dist/css/styles.min.css" />
+    <link rel="stylesheet" href="../../../../dist/css/styles.min.css" />
     <link rel="stylesheet" href="https://helfi-etusivu.docker.so/etusivu-assets/core/themes/stable9/css/system/components/hidden.module.css" />
     <script>
       // Mock Drupal.t & drupalSettings in development to prevent errors.
