UHF-7791: UHF-7791: change folder structure.

--- a/src/js/react/apps/linkedevents/index.html
+++ b/src/js/react/apps/linkedevents/index.html
@@ -9,12 +9,12 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
-    <link rel="preload" href="../../../../dist/fonts/HelsinkiGrotesk-Regular.woff"/>
-    <link rel="preload" href="../../../../dist/fonts/HelsinkiGrotesk-Bold.woff"/>
-    <link rel="preload" href="../../../../dist/fonts/HelsinkiGrotesk-Medium.woff"/>
-    <link rel="stylesheet" href="../../../../dist/css/styles.min.css" />
-    <link rel="stylesheet" href="../../../../dist/css/hdbt-icons.css" />
-    <link rel="stylesheet" href="../../../../dist/css/color-palette.min.css" />
+    <link rel="preload" href="../../../../../dist/fonts/HelsinkiGrotesk-Regular.woff"/>
+    <link rel="preload" href="../../../../../dist/fonts/HelsinkiGrotesk-Bold.woff"/>
+    <link rel="preload" href="../../../../../dist/fonts/HelsinkiGrotesk-Medium.woff"/>
+    <link rel="stylesheet" href="../../../../../dist/css/styles.min.css" />
+    <link rel="stylesheet" href="../../../../../dist/css/hdbt-icons.css" />
+    <link rel="stylesheet" href="../../../../../dist/css/color-palette.min.css" />
     <script>
       // Mock Drupal.t & drupalSettings in development to prevent errors.
       window.Drupal = {
@@ -36,7 +36,7 @@
         }
       }
     </script>
-    <script src="../../../../dist/js/linkedevents.min.js"></script>
+    <script src="../../../../../dist/js/linkedevents.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
