--- a/src/js/react/apps/linkedevents/index.html
+++ b/src/js/react/apps/linkedevents/index.html
@@ -33,6 +33,7 @@
         helfi_events: {
           "imagePlaceholder": "<div class=\"image-placeholder\">\n  <span class=\"hel-icon hel-icon--calendar-clock \"  aria-hidden=\"true\" ></span>\n</div>\n",
           "baseUrl": "https://tapahtumat.hel.fi",
+          "eventCount": 5,
         }
       }
     </script>
