--- a/src/js/react/apps/linkedevents/index.html
+++ b/src/js/react/apps/linkedevents/index.html
@@ -32,8 +32,7 @@
         },
         helfi_events: {
           "imagePlaceholder": "<div class=\"image-placeholder\">\n  <span class=\"hel-icon hel-icon--calendar-clock \"  aria-hidden=\"true\" ></span>\n</div>\n",
-          "baseUrl": "https://tapahtumat.hel.fi",
-          "eventCount": 5,
+          "baseUrl": "https://tapahtumat.hel.fi"
         }
       }
     </script>
@@ -49,6 +48,7 @@
               <div
                 id="helfi-events-search"
                 data-events-url="https://api.hel.fi/linkedevents/v1/event?event_type=General&format=json&include=keywords%2Clocation&page=1&page_size=5&sort=end_time&start=now&super_event_type=umbrella%2Cnone&language=fi&all_ongoing_AND=rock"
+                data-event-count="-1"
                 data-show-location-filter="1"
                 data-show-time-filter="1"
                 data-show-free-events-filter="1"
