UHF-7791: UHF-7791: add styles for container.

--- a/src/js/react/apps/linkedevents/index.html
+++ b/src/js/react/apps/linkedevents/index.html
@@ -42,12 +42,13 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="no-sidebar">
       <div class="main-content components components--upper">
-        <div class="component component--district-and-project-search">
+        <div class="component component--event-list">
           <div class="component__container">
             <div class="component__content district-and-project-search development-container">
               <div
                 id="helfi-events-search"
-                data-events-url="https://api.hel.fi/linkedevents/v1/event?event_type=General&format=json&include=keywords%2Clocation&page=1&page_size=5&sort=end_time&start=now&super_event_type=umbrella%2Cnone&language=fi&all_ongoing_AND=rock"
+                data-events-api-url="https://api.hel.fi/linkedevents/v1/event?event_type=General&format=json&include=keywords%2Clocation&page=1&page_size=5&sort=end_time&start=now&super_event_type=umbrella%2Cnone&language=fi&all_ongoing_AND=rock"
+                data-events-url="https://tapahtumat.hel.fi/en/events?text=rock"
                 data-event-count="-1"
                 data-show-location-filter="1"
                 data-show-time-filter="1"
