UHF-7791: UHF-7791: enhancements.

--- a/src/js/react/apps/linkedevents/index.html
+++ b/src/js/react/apps/linkedevents/index.html
@@ -48,13 +48,7 @@
             <div class="component__content district-and-project-search development-container">
               <div
                 id="helfi-events-search"
-                data-events-api-url="https://api.hel.fi/linkedevents/v1/event?event_type=General&format=json&include=keywords%2Clocation&page=1&page_size=5&sort=end_time&start=now&super_event_type=umbrella%2Cnone&language=fi&all_ongoing_AND=rock"
-                data-events-url="https://tapahtumat.hel.fi/en/events?text=rock"
-                data-event-count="-1"
-                data-show-location-filter="1"
-                data-show-time-filter="1"
-                data-show-free-events-filter="1"
-                data-show-remote-events-filter="1"
+                data-paragraph-id="1375"
                 >
               </div>
             </div>
