--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hel.fi Calculators</title>
   <link rel="stylesheet" media="all" href="../../../dist/css/styles.min.css">
+  <link rel="stylesheet" media="all" href="../../../dist/css/hdbt-icons.css">
   <script>
     // Simulate Drupal environment
     var drupalSettings = {};
@@ -50,6 +51,26 @@
 
 <body>
   <div class="paragraph-content components components--upper">
+
+    <div class="component component--helfi-calculator">
+      <div class="component__container">
+        <h2 class="component__title">Laske arvio varhaiskasvatusmaksusta</h2>
+        <div class="component__content helfi-calculator">
+          <noscript>
+            <div class="component__needs-js">
+              <p>Sorry, as we do not send your data anywhere from this calculator to keep your data safe, it needs Javascript to work. Please enable Javascript in your browser to use this calculator.</p>
+            </div>
+          </noscript>
+          <div id="helfi_calc_1025838706"></div>
+          <script src="../../../dist/js/daycare_payment.min.js"></script>
+          <script>
+            document.addEventListener('DOMContentLoaded', (event) => {
+              const clean = window.helfi_calculator.daycare_payment('helfi_calc_1025838706', drupalSettings.daycare_payment);
+            });
+          </script>
+        </div>
+      </div>
+    </div>
 
     <div class="component component--helfi-calculator">
       <div class="component__container">
