--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -44,59 +44,59 @@
     drupalSettings.family_with_kids_home_service_client_payment = `{}`;
     drupalSettings.daycare_payment = `
 {
-  family_size_income_limits: {
-    '2': {
-      min: 3874,
-      max: 6626
+  "family_size_income_limits": {
+    "2": {
+      "min": 3874,
+      "max": 6626
     },
-    '3': {
-      min: 4998,
-      max: 7750
+    "3": {
+      "min": 4998,
+      "max": 7750
     },
-    '4': {
-      min: 5675,
-      max: 8427
+    "4": {
+      "min": 5675,
+      "max": 8427
     },
-    '5': {
-      min: 6353,
-      max: 9105
+    "5": {
+      "min": 6353,
+      "max": 9105
     },
-    '6': {
-      min: 7028,
-      max: 9780
-    },
+    "6": {
+      "min": 7028,
+      "max": 9780
+    }
   },
-  family_size_beyond_defined_multiplier_euro: 262,
-  minimum_payment_euro: 28,
-  payment_percentage: 10.7,
-  child_1_max_euro: 295,
-  child_2_percent: 40,
-  child_n_percent: 20,
-  discounts: {
-    early_education_on_weekdays: {
-      over_7_hours_percentage: 100,
-      over_5_and_at_most_7_hours_percentage: 80,
-      at_most_5_hours_percentage: 60,
+  "family_size_beyond_defined_multiplier_euro": 262,
+  "minimum_payment_euro": 28,
+  "payment_percentage": 10.7,
+  "child_1_max_euro": 295,
+  "child_2_percent": 40,
+  "child_n_percent": 20,
+  "discounts": {
+    "early_education_on_weekdays": {
+      "over_7_hours_percentage": 100,
+      "over_5_and_at_most_7_hours_percentage": 80,
+      "at_most_5_hours_percentage": 60
     },
-    for_5_year_old: {
-      over_7_hours_percentage: 65,
-      over_5_and_at_most_7_hours_percentage: 40,
-      over_4_and_at_most_5_hours_percentage: 20,
-      at_most_4_hours_percentage: 0,
+    "for_5_year_old": {
+      "over_7_hours_percentage": 65,
+      "over_5_and_at_most_7_hours_percentage": 40,
+      "over_4_and_at_most_5_hours_percentage": 20,
+      "at_most_4_hours_percentage": 0
     },
-    for_6_year_old: {
-      over_7_hours_percentage: 65,
-      from_7_to_8_hours_percentage: 60,
-      over_5_and_at_most_7_hours_percentage: 40,
-      at_most_5_hours_percentage: 20,
+    "for_6_year_old": {
+      "over_7_hours_percentage": 65,
+      "from_7_to_8_hours_percentage": 60,
+      "over_5_and_at_most_7_hours_percentage": 40,
+      "at_most_5_hours_percentage": 20
     },
-    round_the_clock_care: {
-      from_161_hours_percentage: 100,
-      from_101_to_160_hours_percentage: 80,
-      from_61_to_100_hours_percentage: 60,
+    "round_the_clock_care": {
+      "from_161_hours_percentage": 100,
+      "from_101_to_160_hours_percentage": 80,
+      "from_61_to_100_hours_percentage": 60
     },
-    free_day_percentage: 4,
-  },
+    "free_day_percentage": 4
+  }
 }
 `;
     drupalSettings.oral_health_care_procedure = `{}`;
@@ -107,6 +107,49 @@
 
 <body>
   <div class="paragraph-content components components--upper">
+
+    <script>
+      function setValues(selector, data) {
+        const elem = document.querySelector(selector);
+        const selectors = Object.keys(data);
+        for (let i = 0; i < selectors.length; i++) {
+          const selector = selectors[i];
+          const value = data[selector];
+          const field = document.querySelector(selector);
+          if (field && field.tagName === 'INPUT') {
+            if (field.type === 'text') {
+              field.value = value;
+              field.dispatchEvent(new CustomEvent('change',{bubbles: true}));
+            } else if (field.type === 'radio') {
+              field.checked = value;
+              field.dispatchEvent(new CustomEvent('change',{bubbles: true}));
+            } else if (field.type === 'submit' && value === true) {
+              field.click();
+            }
+          } else if (field && field.tagName === 'BUTTON' && value === true) {
+            field.click();
+          }
+        }
+      }
+      window.onload = () => {
+        document.querySelector("#preset_1").click();
+        window.setTimeout(() => {
+          window.scrollTo(0, document.body.scrollHeight);
+        }, 600);
+      }
+    </script>
+
+    <button id="preset_1" onclick="setValues('helfi_calc_1025838706',{
+      '#household_size_helfi_calc_1025838706': 3,
+      '#gross_income_per_month_helfi_calc_1025838706': 5928,
+      '#daycare_type_for_child_1_1_helfi_calc_1025838706': true,
+      '#daycare_type_1_1_group_caretime_1_helfi_calc_1025838706': true,
+      '#add-button_nth_child_helfi_calc_1025838706': true,
+      '#daycare_type_for_child_2_2_helfi_calc_1025838706': true,
+      '#daycare_type_2_2_group_caretime_1_helfi_calc_1025838706': true,
+      '#daycare_type_2_2_free_days_helfi_calc_1025838706': 10,
+      'input.hds-button--primary': true
+    })">family size 3, 5928, 2 full time kids = 140€</button>
 
     <div class="component component--helfi-calculator">
       <div class="component__container">
@@ -127,7 +170,7 @@
         </div>
       </div>
     </div>
-
+<!--
     <div class="component component--helfi-calculator">
       <div class="component__container">
         <h2 class="component__title">House cleaning service voucher</h2>
@@ -187,7 +230,7 @@
         </div>
       </div>
     </div>
-
+ -->
 
   </div>
 </body>
