UHF-7029: UHF-7486: Update labels

--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -149,7 +149,7 @@
       '#daycare_type_2_2_group_caretime_1_helfi_calc_1025838706': true,
       '#daycare_type_2_2_free_days_helfi_calc_1025838706': 10,
       'input.hds-button--primary': true
-    })">family size 3, 5928, 2 full time kids = 140€</button>
+    })">family size 3, 5928, 2 full time kids, second with 10 holidays = 100€</button>
 
     <div class="component component--helfi-calculator">
       <div class="component__container">
