--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -131,6 +131,10 @@
           }
         }
       }
+    </script>
+
+<!--
+    <script>
       window.onload = () => {
         document.querySelector("#preset_1").click();
         window.setTimeout(() => {
@@ -138,7 +142,6 @@
         }, 600);
       }
     </script>
-
     <button id="preset_1" onclick="setValues('helfi_calc_1025838706',{
       '#household_size_helfi_calc_1025838706': 3,
       '#gross_income_per_month_helfi_calc_1025838706': 5928,
@@ -170,6 +173,7 @@
         </div>
       </div>
     </div>
+-->
 <!--
     <div class="component component--helfi-calculator">
       <div class="component__container">
@@ -211,9 +215,29 @@
       </div>
     </div>
 
+ -->
+    <script>
+      // window.onload = () => {
+      //   document.querySelector("#preset_2").click();
+      //   window.setTimeout(() => {
+      //     window.scrollTo(0, document.body.scrollHeight);
+      //   }, 600);
+      // }
+    </script>
+    <button id="preset_2" onclick="setValues('helfi_calc_1655485697',{
+          '#household_size_helfi_calc_1655485697': 1,
+          '#gross_income_per_month_helfi_calc_1655485697': 1500,
+          '#monthly_usage_helfi_calc_1655485697': 15,
+          '#safetyphone_1_helfi_calc_1655485697': true,
+          '#shopping_service_1_helfi_calc_1655485697': true,
+          '#shopping_service_per_week_helfi_calc_1655485697': 2,
+          '#meal_service_1_helfi_calc_1655485697': true,
+          '#meal_service_per_week_helfi_calc_1655485697': 2,
+          'input.hds-button--primary': true
+        })">Debug</button>
     <div class="component component--helfi-calculator">
       <div class="component__container">
-        <h2 class="component__title">Home care client payment</h2>
+        <h2 class="component__title">Laske arvio asiakasmaksusta</h2>
         <div class="component__content helfi-calculator">
           <noscript>
             <div class="component__needs-js">
@@ -230,7 +254,6 @@
         </div>
       </div>
     </div>
- -->
 
   </div>
 </body>
