UHF-7481: UHF-7481: Add option for having child in 24h care with preschool to daycare calculator

--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -95,6 +95,11 @@
       "from_101_to_160_hours_percentage": 80,
       "from_61_to_100_hours_percentage": 60
     },
+    "round_the_clock_care_with_preschool": {
+      "from_161_hours_percentage": 65,
+      "from_101_to_160_hours_percentage": 40,
+      "from_61_to_100_hours_percentage": 20
+    },
     "free_day_percentage": 4
   }
 }
