UHF-7481: UHF-7481: Add meal calculation receipt details

--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -174,7 +174,11 @@
   "meal_service_prices": {
     "lunch": 3.9,
     "delivery": 7,
-    "max_meals_for_single_delivery_per_week": 3
+    "max_meals_for_single_delivery_per_week": 3,
+    "menumat": {
+      "lunch": 6.4,
+      "device_per_day": 2.36
+    }
   }
 }
 `;
