UHF-7481: Switch to use drupalSettings instead of hardcoded settings

--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -39,10 +39,7 @@
 `;
 
     drupalSettings.home_care_service_voucher = `{}`;
-    drupalSettings.home_care_client_payment = `{}`;
-    drupalSettings.service_housing_service_voucher = `{}`;
-    drupalSettings.family_with_kids_home_service_client_payment = `{}`;
-    drupalSettings.daycare_payment = `
+    drupalSettings.home_care_client_payment = = `
 {
   "household_size": {
     "1": {
@@ -179,6 +176,70 @@
       "lunch": 6.4,
       "device_per_day": 2.36
     }
+  }
+}
+`;
+    drupalSettings.service_housing_service_voucher = `{}`;
+    drupalSettings.family_with_kids_home_service_client_payment = `{}`;
+    drupalSettings.daycare_payment = `
+{
+  "family_size_income_limits": {
+    "2": {
+      "min": 3874,
+      "max": 6626
+    },
+    "3": {
+      "min": 4998,
+      "max": 7750
+    },
+    "4": {
+      "min": 5675,
+      "max": 8427
+    },
+    "5": {
+      "min": 6353,
+      "max": 9105
+    },
+    "6": {
+      "min": 7028,
+      "max": 9780
+    }
+  },
+  "family_size_beyond_defined_multiplier_euro": 262,
+  "minimum_payment_euro": 28,
+  "payment_percentage": 10.7,
+  "child_1_max_euro": 295,
+  "child_2_percent": 40,
+  "child_n_percent": 20,
+  "discounts": {
+    "early_education_on_weekdays": {
+      "over_7_hours_percentage": 100,
+      "over_5_and_at_most_7_hours_percentage": 80,
+      "at_most_5_hours_percentage": 60
+    },
+    "for_5_year_old": {
+      "over_7_hours_percentage": 65,
+      "over_5_and_at_most_7_hours_percentage": 40,
+      "over_4_and_at_most_5_hours_percentage": 20,
+      "at_most_4_hours_percentage": 0
+    },
+    "for_6_year_old": {
+      "over_7_hours_percentage": 65,
+      "from_7_to_8_hours_percentage": 60,
+      "over_5_and_at_most_7_hours_percentage": 40,
+      "at_most_5_hours_percentage": 20
+    },
+    "round_the_clock_care": {
+      "from_161_hours_percentage": 100,
+      "from_101_to_160_hours_percentage": 80,
+      "from_61_to_100_hours_percentage": 60
+    },
+    "round_the_clock_care_with_preschool": {
+      "from_161_hours_percentage": 65,
+      "from_101_to_160_hours_percentage": 40,
+      "from_61_to_100_hours_percentage": 20
+    },
+    "free_day_percentage": 4
   }
 }
 `;
