UHF-7481: Update example-calc file

--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -277,14 +277,14 @@
       }
     </script>
 
-<!--
+<!-- - ->
     <script>
-      window.onload = () => {
-        document.querySelector("#preset_1").click();
-        window.setTimeout(() => {
-          window.scrollTo(0, document.body.scrollHeight);
-        }, 600);
-      }
+      // window.onload = () => {
+      //   document.querySelector("#preset_1").click();
+      //   window.setTimeout(() => {
+      //     window.scrollTo(0, document.body.scrollHeight);
+      //   }, 600);
+      // }
     </script>
     <button id="preset_1" onclick="setValues('helfi_calc_1025838706',{
       '#household_size_helfi_calc_1025838706': 3,
@@ -317,8 +317,8 @@
         </div>
       </div>
     </div>
--->
-<!--
+<!-- -->
+<!-- - ->
     <div class="component component--helfi-calculator">
       <div class="component__container">
         <h2 class="component__title">House cleaning service voucher</h2>
@@ -359,7 +359,7 @@
       </div>
     </div>
 
- -->
+ <!-- -->
     <script>
       // window.onload = () => {
       //   document.querySelector("#preset_2").click();
