UHF-7481: Fix example-calc file

--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -39,7 +39,7 @@
 `;
 
     drupalSettings.home_care_service_voucher = `{}`;
-    drupalSettings.home_care_client_payment = = `
+    drupalSettings.home_care_client_payment = `
 {
   "household_size": {
     "1": {
