UHF-7482: Add debug button to example-calc file for homecare voucher

--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -339,9 +339,25 @@
       </div>
     </div>
 
+<!-- -->
+    <script>
+      // window.onload = () => {
+      //   document.querySelector("#preset_1").click();
+      //   window.setTimeout(() => {
+      //     window.scrollTo(0, document.body.scrollHeight);
+      //   }, 600);
+      // }
+    </script>
+    <button id="preset_3" onclick="setValues('helfi_calc_1025838706',{
+      '#household_size_helfi_calc_1700329077': 1,
+      '#gross_income_per_month_helfi_calc_1700329077': 1300,
+      '#monthly_usage_helfi_calc_1700329077': 40,
+      '#service_provider_price_helfi_calc_1700329077': 36,
+      'input.hds-button--primary': true
+    })">household size=1, income=1300, usage=40, price=36, voucher: 29.85, payment: 213.6, city pays:1194, addition to voucher:246</button>
     <div class="component component--helfi-calculator">
       <div class="component__container">
-        <h2 class="component__title">Home care service voucher</h2>
+        <h2 class="component__title">Täytä tiedot palvelusetelin arvon arvioimiseksi</h2>
         <div class="component__content helfi-calculator">
           <noscript>
             <div class="component__needs-js">
@@ -359,7 +375,7 @@
       </div>
     </div>
 
- <!-- -->
+ <!-- - ->
     <script>
       // window.onload = () => {
       //   document.querySelector("#preset_2").click();
@@ -398,7 +414,7 @@
         </div>
       </div>
     </div>
-
+<!-- -->
   </div>
 </body>
 </html>
