--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -46,165 +46,50 @@
   },
   "household_size": {
     "1": {
-      "limit": 588,
-      "percent": 35,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 8,
-        "9": 12,
-        "13": 16,
-        "17": 20,
-        "21": 22,
-        "25": 24,
-        "29": 26,
-        "33": 28,
-        "37": 30,
-        "41": 35
-      }
+      "limit": 598,
+      "percent": 35
     },
     "2": {
-      "limit": 1084,
-      "percent": 22,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 7,
-        "9": 10,
-        "13": 12,
-        "17": 16,
-        "21": 18,
-        "25": 20,
-        "29": 20,
-        "33": 20,
-        "37": 20,
-        "41": 20
-      }
+      "limit": 1103,
+      "percent": 22
     },
     "3": {
-      "limit": 1701,
-      "percent": 18,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 9,
-        "13": 11,
-        "17": 14,
-        "21": 16,
-        "25": 16,
-        "29": 16,
-        "33": 16,
-        "37": 16,
-        "41": 16
-      }
+      "limit": 1731,
+      "percent": 18
     },
     "4": {
-      "limit": 2103,
-      "percent": 15,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 9,
-        "13": 11,
-        "17": 12,
-        "21": 12,
-        "25": 12,
-        "29": 12,
-        "33": 12,
-        "37": 12,
-        "41": 12
-      }
+      "limit": 2140,
+      "percent": 15
     },
     "5": {
-      "limit": 2546,
-      "percent": 13,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 9,
-        "13": 10,
-        "17": 10,
-        "21": 10,
-        "25": 10,
-        "29": 10,
-        "33": 10,
-        "37": 10,
-        "41": 10
-      }
+      "limit": 2591,
+      "percent": 13
     },
     "6": {
-      "limit": 2924,
-      "percent": 11,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 8,
-        "13": 9,
-        "17": 9,
-        "21": 9,
-        "25": 9,
-        "29": 9,
-        "33": 9,
-        "37": 9,
-        "41": 9
-      }
+      "limit": 2976,
+      "percent": 11
     },
     "7": {
-      "limit": 3274,
-      "percent": 10,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 8,
-        "13": 9,
-        "17": 9,
-        "21": 9,
-        "25": 9,
-        "29": 9,
-        "33": 9,
-        "37": 9,
-        "41": 9
-      }
+      "limit": 3332,
+      "percent": 10
     },
     "8": {
-      "limit": 3624,
-      "percent": 9,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 8,
-        "13": 9,
-        "17": 9,
-        "21": 9,
-        "25": 9,
-        "29": 9,
-        "33": 9,
-        "37": 9,
-        "41": 9
-      }
+      "limit": 3688,
+      "percent": 9
     }
   },
   "beyond_cutoff": {
     "cutoff": 8,
     "limit": {
-      "multiply_n": 342,
-      "add": 3483
+      "multiply_n": 356,
+      "add": 3688
     },
     "percent": {
       "multiply_n": -1,
       "add": 9
-    },
-    "payment_class_from_usage_per_month": {
-      "multiply_n": -1,
-      "add": 0
     }
   },
   "covered_hours_per_month": 40,
-  "maximum_payment_from_monthly_usage": {
-    "0": 109.78,
-    "6": 329.34,
-    "11": 603.79,
-    "21": 1152.69,
-    "41": 2250.49
-  },
   "voucher_divisor": 60
 }
     `;
@@ -423,12 +308,12 @@
 
     <script>
       function setValues(selector, data) {
-        const elem = document.querySelector(selector);
+        const elem = document.getElementById(selector);
         const selectors = Object.keys(data);
         for (let i = 0; i < selectors.length; i++) {
           const selector = selectors[i];
           const value = data[selector];
-          const field = document.querySelector(selector);
+          const field = elem.querySelector(selector);
           if (field && field.tagName === 'INPUT') {
             if (field.type === 'text') {
               field.value = value;
@@ -517,10 +402,10 @@
       //   }, 600);
       // }
     </script>
-    <button id="preset_3" onclick="setValues('helfi_calc_1025838706',{
+    <button id="preset_3" onclick="setValues('helfi_calc_1700329077',{
       '#household_size_helfi_calc_1700329077': 1,
       '#gross_income_per_month_helfi_calc_1700329077': 1300,
-      '#monthly_usage_helfi_calc_1700329077': 40,
+      '#monthly_usage_helfi_calc_1700329077': 15,
       '#service_provider_price_helfi_calc_1700329077': 36,
       'input.hds-button--primary': true
     })">household size=1, income=1300, usage=40, price=36, voucher: 29.85, payment: 213.6, city pays:1194, addition to voucher:246</button>
@@ -544,7 +429,7 @@
       </div>
     </div>
 
- <!-- - ->
+ <!-- -->
     <script>
       // window.onload = () => {
       //   document.querySelector("#preset_2").click();
@@ -554,8 +439,8 @@
       // }
     </script>
     <button id="preset_2" onclick="setValues('helfi_calc_1655485697',{
-          '#household_size_helfi_calc_1655485697': 2,
-          '#gross_income_per_month_helfi_calc_1655485697': 1500,
+          '#household_size_helfi_calc_1655485697': 1,
+          '#gross_income_per_month_helfi_calc_1655485697': 1300,
           '#monthly_usage_helfi_calc_1655485697': 15,
           '#safetyphone_1_helfi_calc_1655485697': true,
           '#shopping_service_1_helfi_calc_1655485697': true,
