--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -44,49 +44,38 @@
     "min": 7,
     "max": 34
   },
+  "household_percent_hour_slots": [ 0, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38],
   "household_size": {
     "1": {
       "limit": 598,
-      "percent": 35
+      "percent": [8, 10, 12, 14, 16, 17, 18, 19, 20, 21, 22, 23, 24, 24.5, 25, 25.5, 26, 26.5, 27, 27.5, 28, 28.5, 29, 29.5, 30, 30.5, 31, 31.5, 32, 32.5, 33, 33.5, 34, 34.5, 35]
     },
     "2": {
       "limit": 1103,
-      "percent": 22
+      "percent": [7, 8.75, 10.5, 12.25, 14, 14.75, 15.5, 16.25, 17, 17.75, 18.5, 19.25, 20, 20.5, 21, 21.5, 22, 22.5, 23, 23.5, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24, 24]
     },
     "3": {
       "limit": 1731,
-      "percent": 18
+      "percent": [6, 7.5, 9, 10.5, 12, 12.5, 13, 13.5, 14, 14.5, 15, 15.5, 16, 16.5, 17, 17.5, 18, 18.5, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19, 19]
     },
     "4": {
       "limit": 2140,
-      "percent": 15
+      "percent": [6, 7.5, 9, 10.5, 12, 12.5, 13, 13.5, 14, 14.5, 15, 15.5, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16]
     },
     "5": {
       "limit": 2591,
-      "percent": 13
+      "percent": [6, 7.5, 9, 10.5, 12, 12.5, 13, 13.5, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14, 14]
     },
     "6": {
       "limit": 2976,
-      "percent": 11
-    },
-    "7": {
-      "limit": 3332,
-      "percent": 10
-    },
-    "8": {
-      "limit": 3688,
-      "percent": 9
+      "percent": [6, 7.5, 9, 10.5, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12]
     }
   },
   "beyond_cutoff": {
-    "cutoff": 8,
+    "cutoff": 6,
     "limit": {
       "multiply_n": 356,
-      "add": 3688
-    },
-    "percent": {
-      "multiply_n": -1,
-      "add": 9
+      "add": 2976
     }
   },
   "covered_hours_per_month": 40,
