--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -357,7 +357,64 @@
   }
 }
 `;
-    drupalSettings.family_with_kids_home_service_client_payment = `{}`;
+    drupalSettings.family_with_kids_home_service_client_payment = `
+{
+  "income_limit": {
+    "1": 598,
+    "2": 1103,
+    "3": 1731,
+    "4": 2140,
+    "5": 2591,
+    "6": 2976
+  },
+  "monthly_usage": {
+    "0": {
+      "max": 119.66,
+      "percent": 1
+    },
+    "5": {
+      "max": 538.47,
+      "percent": 2
+    },
+    "9": {
+      "max": 1017.12,
+      "percent": 3
+    },
+    "13": {
+      "max": 1495.76,
+      "percent": 4
+    },
+    "17": {
+      "max": 1974.4,
+      "percent": 5
+    },
+    "21": {
+      "max": 2453.05,
+      "percent": 6
+    },
+    "25": {
+      "max": 2931.69,
+      "percent": 7
+    },
+    "29": {
+      "max": 3410.33,
+      "percent": 8
+    },
+    "33": {
+      "max": 3888.98,
+      "percent": 9
+    },
+    "37": {
+      "max": 4367.62,
+      "percent": 10
+    },
+    "41": {
+      "max": 4906.1,
+      "percent": 11
+    }
+  }
+}
+`;
     drupalSettings.daycare_payment = `
 {
   "family_size_income_limits": {
@@ -571,7 +628,7 @@
       </div>
     </div>
 <!-- -->
-<!-- -->
+<!-- - ->
     <script>
       // window.onload = () => {
       //   document.querySelector("#preset_4").click();
@@ -604,6 +661,40 @@
         </div>
       </div>
     </div>
+<!-- -->
+<!-- -->
+<script>
+      // window.onload = () => {
+      //   document.querySelector("#preset_5").click();
+      //   window.setTimeout(( , document.body.scrollHeight);
+      //   }, 600);
+      // }
+</script>
+<button id="preset_5" onclick="setValues('helfi_calc_2655488697',{
+          '#household_size_helfi_calc_2655488697': 4,
+          '#gross_income_per_month_helfi_calc_2655488697': 2500,
+          '#monthly_usage_helfi_calc_2655488697': 10,
+          'input.hds-button--primary': true
+        })">Debug</button>
+<div class="component component--helfi-calculator">
+  <div class="component__container">
+    <h2 class="component__title">Täytä tiedot asiakasmaksun arvioimiseksi</h2>
+    <div class="component__content helfi-calculator">
+      <noscript>
+        <div class="component__needs-js">
+          <p>Sorry, as we do not send your data anywhere from this calculator to keep your data safe, it needs Javascript to work. Please enable Javascript in your browser to use this calculator.</p>
+        </div>
+      </noscript>
+      <div id="helfi_calc_2655488697"></div>
+      <script src="../../../dist/js/family_with_kids_home_service_client_payment.min.js"></script>
+      <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+          const clean = window.helfi_calculator.family_with_kids_home_service_client_payment('helfi_calc_2655488697', drupalSettings.family_with_kids_home_service_client_payment);
+        });
+      </script>
+    </div>
+  </div>
+</div>
 <!-- -->
   </div>
 </body>
