UHF-7788: UHF-7788: add css from module and finetune styles.

--- a/src/js/react/apps/district-and-project-search/index.html
+++ b/src/js/react/apps/district-and-project-search/index.html
@@ -52,7 +52,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="no-sidebar">
       <div class="main-content components components--upper">
-        <div class="component component--district-and-project-search">
+        <div class="component component--react-search">
           <div class="component__container">
             <div class="component__content district-and-project-search development-container">
               <div id="helfi-kymp-district-project-search"></div>
