UHF-8534: Add tests to example_calc.html

--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -487,7 +487,7 @@
   <div class="paragraph-content components components--upper">
 
     <script>
-      function setValues(selector, data) {
+      function setValues(selector, data, expectedResults) {
         const elem = document.querySelector(selector);
         const selectors = Object.keys(data);
         for (let i = 0; i < selectors.length; i++) {
@@ -506,6 +506,27 @@
             }
           } else if (field && field.tagName === 'BUTTON' && value === true) {
             field.click();
+          }
+        }
+
+        if(expectedResults){
+          const resultSelectors = Object.keys(expectedResults);
+          for (let i = 0; i < resultSelectors.length; i++) {
+            const resultSelector = resultSelectors[i];
+            const expectedValue = expectedResults[resultSelector];
+            const calculatedElem = document.querySelector(resultSelector);
+            if(calculatedElem){
+              const calculatedValue = calculatedElem.innerText;
+              if(calculatedValue !== expectedValue){
+                alert(`Checking value ${i+1}: ${expectedValue} ≠ ${calculatedValue}`);
+                break;
+              }
+            }else{
+
+              alert(`Could not find ${i + 1}: ${resultSelector}`);
+              break;
+            }
+
           }
         }
       }
@@ -553,7 +574,7 @@
     </div>
 <!-- -->
 
-<!-- - ->
+<!-- -->
     <script>
       // window.onload = () => {
       //   document.querySelector("#preset_3").click();
@@ -562,6 +583,7 @@
       //   }, 600);
       // }
     </script>
+    <!-- -- >
     <button id="preset_3" onclick="setValues('helfi_calc_1025838706',{
       '#household_size_helfi_calc_1700329077': 1,
       '#gross_income_per_month_helfi_calc_1700329077': 1300,
@@ -569,6 +591,53 @@
       '#service_provider_price_helfi_calc_1700329077': 36,
       'input.hds-button--primary': true
     })">household size=1, income=1300, usage=40, price=36, voucher: 29.85, payment: 213.6, city pays:1194, addition to voucher:246</button>
+    <!-- -->
+
+    <!-- These tests came from context experts -->
+    <button onclick="setValues('helfi_calc_1025838706',{
+      '#household_size_helfi_calc_1700329077': 1,
+      '#gross_income_per_month_helfi_calc_1700329077': 5975.51,
+      '#monthly_usage_helfi_calc_1700329077': 62,
+      '#service_provider_price_helfi_calc_1700329077': 49,
+      'input.hds-button--primary': true
+    },{
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-total__value': '2604,00',
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal-sum span:first-child': '1885,63 €/kk',
+    })">Test 1 = 2604,00€ (city: 1885,77)</button>
+
+    <button onclick="setValues('helfi_calc_1025838706',{
+      '#household_size_helfi_calc_1700329077': 1,
+      '#gross_income_per_month_helfi_calc_1700329077': 3152.31,
+      '#monthly_usage_helfi_calc_1700329077': 12,
+      '#service_provider_price_helfi_calc_1700329077': 46.5,
+      'input.hds-button--primary': true
+    },{
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-total__value': '329,52',
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal-sum span:first-child': '307,72 €/kk',
+    })">Test 2 = 329,52€ (city: 307,72)</button>
+
+    <button onclick="setValues('helfi_calc_1025838706',{
+      '#household_size_helfi_calc_1700329077': 2,
+      '#gross_income_per_month_helfi_calc_1700329077': 9617.75,
+      '#monthly_usage_helfi_calc_1700329077': 5,
+      '#service_provider_price_helfi_calc_1700329077': 53.9,
+      'input.hds-button--primary': true
+    },{
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-total__value': '234,50',
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal-sum span:first-child': '538,47 €/kk',
+    })">Test 3 = 234,50€ (city: 538,47)</button>
+
+    <button onclick="setValues('helfi_calc_1025838706',{
+      '#household_size_helfi_calc_1700329077': 2,
+      '#gross_income_per_month_helfi_calc_1700329077': 8167.26,
+      '#monthly_usage_helfi_calc_1700329077': 13,
+      '#service_provider_price_helfi_calc_1700329077': 45,
+      'input.hds-button--primary': true
+    },{
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-total__value': '480,61',
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal-sum span:first-child': '849,99 €/kk',
+    })">Test 4 = 480,61€ (city: 849,99)</button>
+
     <div class="component component--helfi-calculator">
       <div class="component__container">
         <h2 class="component__title">Laske arvio kotihoidon palvelusetelistä</h2>
