--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -21,165 +21,26 @@
   },
   "household_size": {
     "1": {
-      "limit": 588,
-      "percent": 35,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 8,
-        "9": 12,
-        "13": 16,
-        "17": 20,
-        "21": 22,
-        "25": 24,
-        "29": 26,
-        "33": 28,
-        "37": 30,
-        "41": 35
-      }
+      "percent": 35
     },
     "2": {
-      "limit": 1084,
-      "percent": 22,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 7,
-        "9": 10,
-        "13": 12,
-        "17": 16,
-        "21": 18,
-        "25": 20,
-        "29": 20,
-        "33": 20,
-        "37": 20,
-        "41": 20
-      }
+      "percent": 22
     },
     "3": {
-      "limit": 1701,
-      "percent": 18,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 9,
-        "13": 11,
-        "17": 14,
-        "21": 16,
-        "25": 16,
-        "29": 16,
-        "33": 16,
-        "37": 16,
-        "41": 16
-      }
+      "percent": 18
     },
     "4": {
-      "limit": 2103,
-      "percent": 15,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 9,
-        "13": 11,
-        "17": 12,
-        "21": 12,
-        "25": 12,
-        "29": 12,
-        "33": 12,
-        "37": 12,
-        "41": 12
-      }
+      "percent": 15
     },
     "5": {
-      "limit": 2546,
-      "percent": 13,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 9,
-        "13": 10,
-        "17": 10,
-        "21": 10,
-        "25": 10,
-        "29": 10,
-        "33": 10,
-        "37": 10,
-        "41": 10
-      }
+      "percent": 13
     },
     "6": {
-      "limit": 2924,
-      "percent": 11,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 8,
-        "13": 9,
-        "17": 9,
-        "21": 9,
-        "25": 9,
-        "29": 9,
-        "33": 9,
-        "37": 9,
-        "41": 9
-      }
-    },
-    "7": {
-      "limit": 3274,
-      "percent": 10,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 8,
-        "13": 9,
-        "17": 9,
-        "21": 9,
-        "25": 9,
-        "29": 9,
-        "33": 9,
-        "37": 9,
-        "41": 9
-      }
-    },
-    "8": {
-      "limit": 3624,
-      "percent": 9,
-      "payment_class_from_usage_per_month": {
-        "0": 4,
-        "5": 6,
-        "9": 8,
-        "13": 9,
-        "17": 9,
-        "21": 9,
-        "25": 9,
-        "29": 9,
-        "33": 9,
-        "37": 9,
-        "41": 9
-      }
+      "percent": 11
     }
   },
-  "beyond_cutoff": {
-    "cutoff": 8,
-    "limit": {
-      "multiply_n": 342,
-      "add": 3483
-    },
-    "percent": {
-      "multiply_n": -1,
-      "add": 9
-    },
-    "payment_class_from_usage_per_month": {
-      "multiply_n": -1,
-      "add": 0
-    }
-  },
+  "household_size_beyond_defined_multiplier_percent": -1,
   "covered_hours_per_month": 40,
-  "maximum_payment_from_monthly_usage": {
-    "0": 109.78,
-    "6": 329.34,
-    "11": 603.79,
-    "21": 1152.69,
-    "41": 2250.49
-  },
   "voucher_divisor": 60
 }
     `;
@@ -487,13 +348,13 @@
   <div class="paragraph-content components components--upper">
 
     <script>
-      function setValues(selector, data, expectedResults) {
-        const elem = document.querySelector(selector);
+      function setValues(formSelector, data, expectedResults) {
+        const elem = document.querySelector('#'+formSelector);
         const selectors = Object.keys(data);
         for (let i = 0; i < selectors.length; i++) {
           const selector = selectors[i];
           const value = data[selector];
-          const field = document.querySelector(selector);
+          const field = elem.querySelector(selector);
           if (field && field.tagName === 'INPUT') {
             if (field.type === 'text') {
               field.value = value;
@@ -510,23 +371,26 @@
         }
 
         if(expectedResults){
+          let errors = [];
           const resultSelectors = Object.keys(expectedResults);
           for (let i = 0; i < resultSelectors.length; i++) {
             const resultSelector = resultSelectors[i];
             const expectedValue = expectedResults[resultSelector];
-            const calculatedElem = document.querySelector(resultSelector);
+            const calculatedElem = elem.querySelector(resultSelector);
             if(calculatedElem){
               const calculatedValue = calculatedElem.innerText;
               if(calculatedValue !== expectedValue){
-                alert(`Checking value ${i+1}: ${expectedValue} ≠ ${calculatedValue}`);
-                break;
+                errors.push(`Checking value ${i+1}: ${expectedValue} ≠ ${calculatedValue}`);
               }
             }else{
-
-              alert(`Could not find ${i + 1}: ${resultSelector}`);
-              break;
+              errors.push(`Could not find element number ${i + 1}: ${resultSelector}`);
             }
-
+          }
+          if(errors.length === 0){
+            console.info('No errors were found');
+          }else{
+            console.error(errors.join('\n'));
+            // alert(errors.join('\n'));
           }
         }
       }
@@ -584,7 +448,7 @@
       // }
     </script>
     <!-- -- >
-    <button id="preset_3" onclick="setValues('helfi_calc_1025838706',{
+    <button id="preset_3" onclick="setValues('helfi_calc_1700329077',{
       '#household_size_helfi_calc_1700329077': 1,
       '#gross_income_per_month_helfi_calc_1700329077': 1300,
       '#monthly_usage_helfi_calc_1700329077': 40,
@@ -594,7 +458,7 @@
     <!-- -->
 
     <!-- These tests came from context experts -->
-    <button onclick="setValues('helfi_calc_1025838706',{
+    <button onclick="setValues('helfi_calc_1700329077',{
       '#household_size_helfi_calc_1700329077': 1,
       '#gross_income_per_month_helfi_calc_1700329077': 5975.51,
       '#monthly_usage_helfi_calc_1700329077': 62,
@@ -602,10 +466,10 @@
       'input.hds-button--primary': true
     },{
       '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-total__value': '2604,00',
-      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal-sum span:first-child': '1885,63 €/kk',
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal:last-child span:first-child': '1885,77 €/kk',
     })">Test 1 = 2604,00€ (city: 1885,77)</button>
 
-    <button onclick="setValues('helfi_calc_1025838706',{
+    <button onclick="setValues('helfi_calc_1700329077',{
       '#household_size_helfi_calc_1700329077': 1,
       '#gross_income_per_month_helfi_calc_1700329077': 3152.31,
       '#monthly_usage_helfi_calc_1700329077': 12,
@@ -613,10 +477,10 @@
       'input.hds-button--primary': true
     },{
       '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-total__value': '329,52',
-      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal-sum span:first-child': '307,72 €/kk',
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal:last-child span:first-child': '307,72 €/kk',
     })">Test 2 = 329,52€ (city: 307,72)</button>
 
-    <button onclick="setValues('helfi_calc_1025838706',{
+    <button onclick="setValues('helfi_calc_1700329077',{
       '#household_size_helfi_calc_1700329077': 2,
       '#gross_income_per_month_helfi_calc_1700329077': 9617.75,
       '#monthly_usage_helfi_calc_1700329077': 5,
@@ -624,10 +488,10 @@
       'input.hds-button--primary': true
     },{
       '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-total__value': '234,50',
-      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal-sum span:first-child': '538,47 €/kk',
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal:last-child span:first-child': '538,47 €/kk',
     })">Test 3 = 234,50€ (city: 538,47)</button>
 
-    <button onclick="setValues('helfi_calc_1025838706',{
+    <button onclick="setValues('helfi_calc_1700329077',{
       '#household_size_helfi_calc_1700329077': 2,
       '#gross_income_per_month_helfi_calc_1700329077': 8167.26,
       '#monthly_usage_helfi_calc_1700329077': 13,
@@ -635,7 +499,7 @@
       'input.hds-button--primary': true
     },{
       '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-total__value': '480,61',
-      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal-sum span:first-child': '849,99 €/kk',
+      '#receipt_helfi_calc_1700329077 .helfi-calculator__receipt-subtotal:last-child span:first-child': '849,99 €/kk',
     })">Test 4 = 480,61€ (city: 849,99)</button>
 
     <div class="component component--helfi-calculator">
@@ -688,6 +552,8 @@
           '#shopping_service_2_helfi_calc_1655485697': true,
           '#meal_service_2_helfi_calc_1655485697': true,
           'input.hds-button--primary': true
+        },{
+          '#receipt_helfi_calc_1655485697 .helfi-calculator__receipt-total__value': '444,24',
         })">Test 1 = 444,24€</button>
 
     <button onclick="setValues('helfi_calc_1655485697',{
@@ -698,7 +564,9 @@
           '#shopping_service_2_helfi_calc_1655485697': true,
           '#meal_service_2_helfi_calc_1655485697': true,
           'input.hds-button--primary': true
-        })">Test 2 = 307,44€</button>
+        },{
+          '#receipt_helfi_calc_1655485697 .helfi-calculator__receipt-total__value': '308,44',
+        })">Test 2 = 308,44€</button>
 
     <button onclick="setValues('helfi_calc_1655485697',{
           '#household_size_helfi_calc_1655485697': 1,
@@ -708,6 +576,8 @@
           '#shopping_service_2_helfi_calc_1655485697': true,
           '#meal_service_2_helfi_calc_1655485697': true,
           'input.hds-button--primary': true
+        },{
+          '#receipt_helfi_calc_1655485697 .helfi-calculator__receipt-total__value': '720,60',
         })">Test 3 = 720,60€</button>
 
     <button onclick="setValues('helfi_calc_1655485697',{
@@ -718,6 +588,8 @@
           '#shopping_service_2_helfi_calc_1655485697': true,
           '#meal_service_2_helfi_calc_1655485697': true,
           'input.hds-button--primary': true
+        },{
+          '#receipt_helfi_calc_1655485697 .helfi-calculator__receipt-total__value': '377,46',
         })">Test 4 = 377,46€</button>
 
     <button onclick="setValues('helfi_calc_1655485697',{
@@ -728,6 +600,8 @@
           '#shopping_service_2_helfi_calc_1655485697': true,
           '#meal_service_2_helfi_calc_1655485697': true,
           'input.hds-button--primary': true
+        },{
+          '#receipt_helfi_calc_1655485697 .helfi-calculator__receipt-total__value': '979,40',
         })">Test 5 = 979,40€</button>
 
     <button onclick="setValues('helfi_calc_1655485697',{
@@ -738,6 +612,8 @@
           '#shopping_service_2_helfi_calc_1655485697': true,
           '#meal_service_2_helfi_calc_1655485697': true,
           'input.hds-button--primary': true
+        },{
+          '#receipt_helfi_calc_1655485697 .helfi-calculator__receipt-total__value': '443,04',
         })">Test 6 = 443,04€</button>
 
     <button onclick="setValues('helfi_calc_1655485697',{
@@ -748,6 +624,8 @@
           '#shopping_service_2_helfi_calc_1655485697': true,
           '#meal_service_2_helfi_calc_1655485697': true,
           'input.hds-button--primary': true
+        },{
+          '#receipt_helfi_calc_1655485697 .helfi-calculator__receipt-total__value': '150,12',
         })">Test 7 = 150,12€</button>
 
     <button onclick="setValues('helfi_calc_1655485697',{
@@ -758,6 +636,8 @@
           '#shopping_service_2_helfi_calc_1655485697': true,
           '#meal_service_2_helfi_calc_1655485697': true,
           'input.hds-button--primary': true
+        },{
+          '#receipt_helfi_calc_1655485697 .helfi-calculator__receipt-total__value': '0,00',
         })">Test 8 = 0,00€</button>
 
     <button onclick="setValues('helfi_calc_1655485697',{
@@ -768,6 +648,8 @@
           '#shopping_service_2_helfi_calc_1655485697': true,
           '#meal_service_2_helfi_calc_1655485697': true,
           'input.hds-button--primary': true
+        },{
+          '#receipt_helfi_calc_1655485697 .helfi-calculator__receipt-total__value': '119,66',
         })">Test 9 = 119,66€</button>
 
     <div class="component component--helfi-calculator">
