--- a/src/js/calculator/example-calc.html
+++ b/src/js/calculator/example-calc.html
@@ -672,7 +672,7 @@
       </div>
     </div>
 <!-- -->
-<!-- - ->
+<!-- -->
     <script>
       // window.onload = () => {
       //   document.querySelector("#preset_4").click();
@@ -688,7 +688,7 @@
         })">Debug</button>
     <div class="component component--helfi-calculator">
       <div class="component__container">
-        <h2 class="component__title">Täytä tiedot palvelusetelin arvon arvioimiseksi</h2>
+        <h2 class="component__title">Laske arvio palveluasumisen palvelusetelistä</h2>
         <div class="component__content helfi-calculator">
           <noscript>
             <div class="component__needs-js">
